# Projekt-IOT

./: .docker-compose.yml.swp  .gitignore  README.md  a.out  docker-compose.yml  gtest.cpp
MQTT_test/: Doxyfile  Server.py  edge1.py  sensor.py  sensor1.py  test.py
QuestDB/: .dockerignore  .main.cpp.swp  CMakeLists.txt  DB.sh  Dockerfile  docker-compose.yml  main.cpp  run-loop.sh
QuestDB/questdb-9.0.3-rt-linux-x86-64/lib/: jspawnhelper
fastapi/: .Dockerfile.swp  Dockerfile  mainapi.py
gtest/: CMakeLists.txt  gtest.cpp
mqtt/: CMakeLists.txt  Dockerfile  Dockerfile_client  ModbusRTU.cpp  OlimexWIFI.h  flags.sh  paho-pub  paho-pub.cpp  paho-sub  paho-sub.cpp  pahopub  pahosub  publog  publog.cpp  spdlogSecurity.cpp  spdlogSecurity.h
mqtt/config/: mosquitto.conf
nodered_data/: .config.runtime.json  .config.runtime.json.backup  flows.json  flows_cred.json
